testdata/baselines/reference/compiler/fuzzRegressionIncompleteComment.errors.txt
fuzzRegressionIncompleteComment.ts(4,1): error TS1010: '*/' expected.


==== fuzzRegressionIncompleteComment.ts (1 errors) ====
    // Test case from fuzz test 245e0d71d47dfee6
    // Incomplete block comment
    /*/
    
    
!!! error TS1010: '*/' expected.